single blog is ready

--- a/single-block.html
+++ b/single-block.html
@@ -76,45 +76,126 @@
         </div>
 
     </nav>
+
     <div id="sblog-section-hero" class="help-section-hero container-fluid px-0">
         <div class="help-section-hero-overlay d-flex align-items-center justify-content-center">
             <h1 class="font-italic">כותרת / ציטוט</h1>
         </div>
     </div>
-    <div class="sblog-section-blog container-fluid">
-        <div class="row mx-0">
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
+    <div class="sblog-section-blog container-fluid px-0">
+        <div class="d-flex">
+            <div class="blog-content-wrapper">
+                <h2 class="text-dark mb-0">כותרת הכתבה</h2>
+                <p class="mb-0 blog-date small">יוני 15, 2022</p>
+                <div class="blog-content mt-4 pt-2">
+                    <p>
+                        לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה
+                        ברורק.
+                        קוואזי במר מודוף. אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ
+                        תתיח
+                        לרעח.
+                    </p>
+                    <p> לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק. קולורס מונפרד אדנדום
+                        סילקוף, מרגשי ומרגשח. עמחליף קונסקטורר אדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס
+                        איאקוליס
+                        וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום סוליסי טידום בעליק.
+                        קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
+                    </p>
+                    <h4 class="blog-heading my-4">
+                        כותרת הכתבה
+                    </h4>
+                    <p>
+                        לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה
+                        ברורק.
+                        קוואזי במר מודוף. אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ
+                        תתיח
+                        לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק. קולורס מונפרד
+                        אדנדום
+                        סילקוף, מרגשי ומרגשח. עמחליף קונסקטורר אדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס
+                        איאקוליס
+                        וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום סוליסי טידום בעליק.
+                        קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
+                    </p>
                 </div>
-                <div class="row">
-                    <div class="col-lg-12"></div>
-                </div>
-
             </div>
-            <div class="col-lg-5">
-                <div class="sblog-section-blog__article"></div>
+
+            <div class="blog-author-info mx-auto">
+                <img class="blog-author-img rounded-circle" src="./assets/images/author.png" alt="author">
+                <h4 class="text-dark author-name mt-4">היי, אני הדר</h4>
+                <p class="mt-4" s>לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה
+                    שיצמה ברורק.
+                    קוואז , בנפת נפקט למסון בלרק - וענוף לפרומ</p>
             </div>
         </div>
     </div>
-    <div class="sblog-section-subscribe container-fluid text-center">
-        <h1>
+    <div class="sblog-articles-section d-flex mx-auto">
+        <div class="sblog-lightbox-wrapper">
+            <div class="d-flex gap-3">
+                <div class="sblog-lightbox">
+                    <img src="./assets/images/blog-hero.png" alt="galler-img">
+                </div>
+                <div class="sblog-lightbox">
+                    <img src="./assets/images/blog-hero.png" alt="galler-img">
+                </div>
+                <div class="sblog-lightbox">
+                    <img src="./assets/images/blog-hero.png" alt="galler-img">
+                </div>
+            </div>
+            <div class="sblog-lightbox-main-img mt-3">
+                <img class="w-100" src="./assets/images/blog-hero.png" alt="main-img">
+            </div>
+        </div>
+        <div class="sblog-article-list d-flex flex-column justify-content-around">
+            <div class="d-flex mb-2">
+                <img src="./assets/images/gallery-18.png" alt="blog-img">
+                <div class="blog-info d-flex justify-content-center flex-column me-3">
+                    <p class="mb-1">ש בליא</p>
+                    <h6 class="text-dark">
+                        << המשך קריאה</h6>
+                </div>
+            </div>
+            <div class="d-flex mb-2">
+                <img src="./assets/images/gallery-20.png" alt="blog-img">
+                <div class="blog-info d-flex justify-content-center flex-column me-3">
+                    <p class="mb-1">ש בליא</p>
+                    <h6 class="text-dark">
+                        << המשך קריאה</h6>
+                </div>
+            </div>
+            <div class="d-flex mb-2">
+                <img src="./assets/images/gallery-21.png" alt="blog-img">
+                <div class="blog-info d-flex justify-content-center flex-column me-3">
+                    <p class="mb-1">ש בליא</p>
+                    <h6 class="text-dark">
+                        << המשך קריאה</h6>
+                </div>
+            </div>
+            <div class="d-flex">
+                <img src="./assets/images/gallery-24.png" alt="blog-img">
+                <div class="blog-info d-flex justify-content-center flex-column me-3">
+                    <p class="mb-1">י צש בליא</p>
+                    <h5 class="text-dark">
+                        << המשך קריאה</h5>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="sblog-section-subscribe container-fluid text-center position-relative">
+        <img id="sblog-bird-right" class="position-absolute" src="./assets/images/bird-grey.svg" alt="bird-gray">
+        <h2 class="mb-4 sblog-title">
             ?אהבת את מה שקראת
-        </h1>
+        </h2>
         <div class="row mx-0">
             <div class="col-lg-5 mx-auto">
-                <p>
+                <p class="sblog-description mx-auto">
                     לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
                     קוואזי במר
-                    מודוף.
-                    אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
-                    בליא,
+                    מודוף. בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
                 </p>
             </div>
         </div>
-        <div class="row mx-0">
+        <div class="row mx-0 justify-content-center">
             <form action="" class="subscribe-form mb-4">
                 <input type="text" class="form-control bg-transparent text-light border-1 border-light rounded-0"
                     placeholder="כתובת מייל">
