--- a/single-block-2.html
+++ b/single-block-2.html
@@ -76,83 +76,206 @@
         </div>
 
     </nav>
-    <div class="sblog-section-hero container-fluid">
+    <div id="sblog2-section-hero" class="help-section-hero container-fluid px-0">
+        <div class="help-section-hero-overlay d-flex align-items-center justify-content-center">
+            <h1 class="font-italic">כותרת / ציטוט</h1>
+        </div>
     </div>
     <div class="sblog2-section-main">
         <div class="inner-container d-flex flex-row">
             <div class="img-container">
-                <div class="d-flex secondary-img-container">
-                    <img src="./assets/images/blog-hero.png" alt="" class="secondary-img">
-                    <img src="./assets/images/blog-hero.png" alt="" class="secondary-img">
-                    <img src="./assets/images/blog-hero.png" alt="" class="secondary-img">
-                </div>
-                <img src="./assets/images/blog-hero.png" alt="img blog" class="main-img">
-                <div class="carousel-container">
-                    <div class="track">
-                        <div class="card-container">
-                            <div class="card">
-                                <div class="card-img-top">
-
-                                </div>
-                            </div>
+                <div id="s2blog-lightbox" class="sblog-lightbox-wrapper">
+                    <div class="d-flex box">
+                        <div class="sblog-lightbox">
+                            <img src="./assets/images/blog-hero.png" alt="galler-img">
+                        </div>
+                        <div class="sblog-lightbox">
+                            <img src="./assets/images/blog-hero.png" alt="galler-img">
+                        </div>
+                        <div class="sblog-lightbox">
+                            <img src="./assets/images/blog-hero.png" alt="galler-img">
                         </div>
                     </div>
-
+                    <div class="sblog-lightbox-main-img">
+                        <img class="w-100" src="./assets/images/blog-hero.png" alt="main-img">
+                    </div>
+                </div>
+                <div class="carousel-container">
+                    <div class="s2blog-carausel mx-auto">
+                        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="false">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div class="d-flex gap-3 gap-lg-5">
+                                        <div class="card bg-transparent px-0 border-0">
+                                            <div class="card-body p-0 text-center">
+                                                <img class="card-img rounded-0" src="./assets/images/gallery-24.png"
+                                                    alt="gallery-img">
+                                                <div class="caption w-100">
+                                                    <p class="mb-0 mt-1">כותרת</p>
+                                                    <h6>
+                                                        << קראו עוד</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card bg-transparent px-0 border-0">
+                                            <div class="card-body p-0 text-center">
+                                                <img class="card-img rounded-0" src="./assets/images/gallery-18.png"
+                                                    alt="gallery-img">
+                                                <div class="caption w-100">
+                                                    <p class="mb-0 mt-1">כותרת</p>
+                                                    <h6>
+                                                        << קראו עוד</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card bg-transparent px-0 border-0">
+                                            <div class="card-body p-0 text-center">
+                                                <img class="card-img rounded-0" src="./assets/images/gallery-21.png"
+                                                    alt="gallery-img">
+                                                <div class="caption w-100">
+                                                    <p class="mb-0 mt-1">כותרת</p>
+                                                    <h6>
+                                                        << קראו עוד</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card bg-transparent px-0 border-0">
+                                            <div class="card-body p-0 text-center">
+                                                <img class="card-img rounded-0" src="./assets/images/gallery-22.png"
+                                                    alt="gallery-img">
+                                                <div class="caption w-100">
+                                                    <p class="mb-0 mt-1">כותרת</p>
+                                                    <h6>
+                                                        << קראו עוד</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="d-flex gap-3 gap-lg-5">
+                                        <div class="card bg-transparent px-0 border-0">
+                                            <div class="card-body p-0 text-center">
+                                                <img class="card-img rounded-0" src="./assets/images/gallery-24.png"
+                                                    alt="gallery-img">
+                                                <div class="caption w-100">
+                                                    <p class="mb-0 mt-1">כותרת</p>
+                                                    <h6>
+                                                        << קראו עוד</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card bg-transparent px-0 border-0">
+                                            <div class="card-body p-0 text-center">
+                                                <img class="card-img rounded-0" src="./assets/images/gallery-18.png"
+                                                    alt="gallery-img">
+                                                <div class="caption w-100">
+                                                    <p class="mb-0 mt-1">כותרת</p>
+                                                    <h6>
+                                                        << קראו עוד</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card bg-transparent px-0 border-0">
+                                            <div class="card-body p-0 text-center">
+                                                <img class="card-img rounded-0" src="./assets/images/gallery-21.png"
+                                                    alt="gallery-img">
+                                                <div class="caption w-100">
+                                                    <p class="mb-0 mt-1">כותרת</p>
+                                                    <h6>
+                                                        << קראו עוד</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card bg-transparent px-0 border-0">
+                                            <div class="card-body p-0 text-center">
+                                                <img class="card-img rounded-0" src="./assets/images/gallery-22.png"
+                                                    alt="gallery-img">
+                                                <div class="caption w-100">
+                                                    <p class="mb-0 mt-1">כותרת</p>
+                                                    <h6>
+                                                        << קראו עוד</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" style="height: 18px;"
+                                    aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" style="height: 18px;"
+                                    aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="text-container">
-                <h1 class="mb-0 text-right">
+            <div class="blog-content-wrapper text-container">
+                <h2 class="text-dark mb-0 font-italic">
                     כותרת הכתבה
-                </h1>
-                <p class="date">
+                </h2>
+                <p class="mb-0 blog-date small">
                     יוני 15, 2022
                 </p>
-                <p>
-                    לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
-                    קוואזי במר מודוף.
-                    אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
-                    בליא, מנסוטו צמלח לביקו
-                    ננבי, צמוקו בלוקריה שיצמה ברורק. קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח.
-                </p>
-                <p>
-                    עמחליף קונסקטורר אדיפיסינג אלית. סת אלמנקום
-                    ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום
-                    סוליסי טידום בעליק.
-                    קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
-                </p>
-                <h2 class="blue-text">
-                    כותרת משנה
-                </h2>
-                <p>
-                    לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
-                    קוואזי במר מודוף.
-                    אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
-                    בליא, מנסוטו צמלח לביקו
-                    ננבי, צמוקו בלוקריה שיצמה ברורק.
-                </p>
-                <p>
-                    קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח. עמחליף קונסקטורר אדיפיסינג אלית. סת אלמנקום
-                    ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו וסטיבולום
-                    סוליסי טידום בעליק.
-                    קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי. קולורס מונפרד אדנדום סילקוף,
-                    מרגשי ומרגשח.
-                    עמחליף
-                    קונסקטורר אדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור,
-                    קראס אגת לקטוס וואל
-                    אאוגו וסטיבולום סוליסי טידום בעליק. קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק
-                    לרטי.
-                </p>
+                <div class="blog-content mt-4 pt-2">
+                    <p>
+                        לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
+                        קוואזי במר מודוף.
+                        אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
+                        בליא, מנסוטו צמלח לביקו
+                        ננבי, צמוקו בלוקריה שיצמה ברורק. קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח.
+                    </p>
+                    <p>
+                        עמחליף קונסקטורר אדיפיסינג אלית. סת אלמנקום
+                        ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו
+                        וסטיבולום
+                        סוליסי טידום בעליק.
+                        קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי.
+                    </p>
+                    <h4 class="blog-heading my-4">
+                        כותרת משנה
+                    </h4>
+                    <p>
+                        לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
+                        קוואזי במר מודוף.
+                        אודיפו בלאסטיק מונופץ קליר, בנפת נפקט למסון בלרק - וענוף לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש
+                        בליא, מנסוטו צמלח לביקו
+                        ננבי, צמוקו בלוקריה שיצמה ברורק.
+                    </p>
+                    <p>
+                        קולורס מונפרד אדנדום סילקוף, מרגשי ומרגשח. עמחליף קונסקטורר אדיפיסינג אלית. סת אלמנקום
+                        ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט דולור, קראס אגת לקטוס וואל אאוגו
+                        וסטיבולום
+                        סוליסי טידום בעליק.
+                        קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך תצטריק לרטי. קולורס מונפרד אדנדום
+                        סילקוף,
+                        מרגשי ומרגשח.
+                        עמחליף
+                        קונסקטורר אדיפיסינג אלית. סת אלמנקום ניסי נון ניבאה. דס איאקוליס וולופטה דיאם. וסטיבולום אט
+                        דולור,
+                        קראס אגת לקטוס וואל
+                        אאוגו וסטיבולום סוליסי טידום בעליק. קונדימנטום קורוס בליקרה, נונסטי קלובר בריקנה סטום, לפריקך
+                        תצטריק
+                        לרטי.
+                    </p>
+                </div>
             </div>
         </div>
-
     </div>
     <div class="sblog-section-subscribe container-fluid text-center">
-        <h1>
+        <h2 class="text-dark mb-4 sblog-title">
             ?אהבת את מה שקראת
-        </h1>
+        </h2>
         <div class="row mx-0">
             <div class="col-lg-5 mx-auto">
-                <p>
+                <p class="sblog-description text-dark">
                     לפרומי בלוף קינץ תתיח לרעח. לת צשחמי צש בליא, מנסוטו צמלח לביקו ננבי, צמוקו בלוקריה שיצמה ברורק.
                     קוואזי במר
                     מודוף.
@@ -161,11 +284,11 @@
                 </p>
             </div>
         </div>
-        <div class="row mx-0">
+        <div class="row mx-0 justify-content-center">
             <form action="" class="subscribe-form mb-4">
                 <input type="text" class="form-control bg-transparent text-light border-1 border-light rounded-0"
                     placeholder="כתובת מייל">
-                <button type="submit" class="btn bg-light mt-3 w-100 rounded-0">אני רוצה להרשם</button>
+                <button type="submit" class="btn mt-3 w-100 rounded-0">אני רוצה להרשם</button>
             </form>
             <p>
                 הערה חשובה פה למטה בכוכבית *
