--- a/single-block-2.html
+++ b/single-block-2.html
@@ -86,18 +86,18 @@
             <div class="img-container">
                 <div id="s2blog-lightbox" class="sblog-lightbox-wrapper">
                     <div class="d-flex box">
-                        <div class="sblog-lightbox">
-                            <img src="./assets/images/blog-hero.png" alt="galler-img">
+                        <div class="sblog-lightbox my-slide">
+                            <img src="./assets/images/gallery-18.png" alt="galler-img">
                         </div>
-                        <div class="sblog-lightbox">
-                            <img src="./assets/images/blog-hero.png" alt="galler-img">
+                        <div class="sblog-lightbox my-slide">
+                            <img src="./assets/images/gallery-21.png" alt="galler-img">
                         </div>
-                        <div class="sblog-lightbox">
+                        <div class="sblog-lightbox my-slide">
                             <img src="./assets/images/blog-hero.png" alt="galler-img">
                         </div>
                     </div>
                     <div class="sblog-lightbox-main-img">
-                        <img class="w-100" src="./assets/images/blog-hero.png" alt="main-img">
+                        <img id="light-box-main-img" class="w-100" src="./assets/images/blog-hero.png" alt="main-img">
                     </div>
                 </div>
                 <div class="carousel-container">
@@ -295,6 +295,8 @@
             </p>
         </div>
     </div>
+    <script src="./index.js" defer></script>
+
 </body>
 
 </html>
