--- a/single-block-2.html
+++ b/single-block-2.html
@@ -269,7 +269,8 @@
             </div>
         </div>
     </div>
-    <div class="sblog-section-subscribe container-fluid text-center">
+    <div class="sblog-section-subscribe container-fluid text-center position-relative">
+        <img id="s2blog-bird-right" class="position-absolute" src="./assets/images/bird-grey.svg" alt="bird-gray">
         <h2 class="text-dark mb-4 sblog-title">
             ?אהבת את מה שקראת
         </h2>
