--- a/single-block-2.html
+++ b/single-block-2.html
@@ -87,13 +87,16 @@
                 <div id="s2blog-lightbox" class="sblog-lightbox-wrapper">
                     <div class="d-flex box">
                         <div class="sblog-lightbox my-slide">
-                            <img src="./assets/images/gallery-18.png" alt="galler-img">
+                            <img src="./assets/images/blog-hero.png" alt="galler-img" " data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop">
                         </div>
                         <div class="sblog-lightbox my-slide">
-                            <img src="./assets/images/gallery-21.png" alt="galler-img">
+                            <img src="./assets/images/help-hero.png" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop" alt="galler-img">
                         </div>
                         <div class="sblog-lightbox my-slide">
-                            <img src="./assets/images/blog-hero.png" alt="galler-img">
+                            <img src="./assets/images/gallery-hero.png" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop" alt="galler-img">
                         </div>
                     </div>
                     <div class="sblog-lightbox-main-img">
@@ -296,6 +299,61 @@
             </p>
         </div>
     </div>
+
+
+    <!-- Modal -->
+    <div class="modal rounded-0 modal-lg" id="staticBackdrop"
+        data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-0" style="width: 1000px;">
+                <div class="modal-header border-0">
+                    <button type="button p-0" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body px-5 pt-0 pb-5">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item">
+                                <img src="./assets/images/gallery-hero.png" class="d-block w-100" alt="galler-img">
+                            </div>
+                            <div class="carousel-item active">
+                                <img src="./assets/images/help-hero.png" class="d-block w-100" alt="galler-img">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/images/blog-hero.png" class="d-block w-100" alt="galler-img">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                        <div class="bottom-indicators row">
+                            <div class="col px-0">
+                                <img src="./assets/images/gallery-hero.png" alt="galler-img"
+                                    data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active w-100"
+                                    aria-current="true" aria-label="Slide 1">
+                            </div>
+                            <div class="col px-0">
+                                <img src="./assets/images/help-hero.png" class="w-100" alt="galler-img"
+                                    data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2">
+                            </div>
+                            <div class="col px-0">
+                                <img src="./assets/images/blog-hero.png" alt="galler-img" class="w-100"
+                                    data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./index.js" defer></script>
 
 </body>
