--- a/single-block-2.html
+++ b/single-block-2.html
@@ -311,7 +311,7 @@
                     <button type="button p-0" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body px-5 pt-0 pb-5">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                         <div class="carousel-inner">
                             <div class="carousel-item">
                                 <img src="./assets/images/gallery-hero.png" class="d-block w-100" alt="galler-img">
