--- a/single-block-2.html
+++ b/single-block-2.html
@@ -6,8 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HP</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/bootstrap-5.2.0-beta1-dist/css/bootstrap.min.css">
-    <script src="./assets/bootstrap-5.2.0-beta1-dist/js/bootstrap.min.js" defer></script>
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
     <link rel="stylesheet" href="./assets/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -87,7 +91,7 @@
                 <div id="s2blog-lightbox" class="sblog-lightbox-wrapper">
                     <div class="d-flex box">
                         <div class="sblog-lightbox my-slide">
-                            <img src="./assets/images/blog-hero.png" alt="galler-img" " data-bs-toggle="modal"
+                            <img src="./assets/images/blog-hero.png" alt="galler-img" " data-bs-toggle=" modal"
                                 data-bs-target="#staticBackdrop">
                         </div>
                         <div class="sblog-lightbox my-slide">
@@ -104,119 +108,109 @@
                     </div>
                 </div>
                 <div class="carousel-container">
-                    <div class="s2blog-carausel mx-auto">
-                        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="false">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <div class="d-flex gap-3 gap-lg-5">
-                                        <div class="card bg-transparent px-0 border-0">
-                                            <div class="card-body p-0 text-center">
-                                                <img class="card-img rounded-0" src="./assets/images/gallery-24.png"
-                                                    alt="gallery-img">
-                                                <div class="caption w-100">
-                                                    <p class="mb-0 mt-1">כותרת</p>
-                                                    <h6>
-                                                        << קראו עוד</h6>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="card bg-transparent px-0 border-0">
-                                            <div class="card-body p-0 text-center">
-                                                <img class="card-img rounded-0" src="./assets/images/gallery-18.png"
-                                                    alt="gallery-img">
-                                                <div class="caption w-100">
-                                                    <p class="mb-0 mt-1">כותרת</p>
-                                                    <h6>
-                                                        << קראו עוד</h6>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="card bg-transparent px-0 border-0">
-                                            <div class="card-body p-0 text-center">
-                                                <img class="card-img rounded-0" src="./assets/images/gallery-21.png"
-                                                    alt="gallery-img">
-                                                <div class="caption w-100">
-                                                    <p class="mb-0 mt-1">כותרת</p>
-                                                    <h6>
-                                                        << קראו עוד</h6>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="card bg-transparent px-0 border-0">
-                                            <div class="card-body p-0 text-center">
-                                                <img class="card-img rounded-0" src="./assets/images/gallery-22.png"
-                                                    alt="gallery-img">
-                                                <div class="caption w-100">
-                                                    <p class="mb-0 mt-1">כותרת</p>
-                                                    <h6>
-                                                        << קראו עוד</h6>
-                                                </div>
-                                            </div>
+                    <div class="s2blog-carausel position-relative mx-auto" style="max-width: 44rem;">
+                            <div class="d-flex article-slider gap-3 gap-lg-5">
+                                <div class="card bg-transparent mx-2 px-0 border-0">
+                                    <div class="card-body p-0 text-center">
+                                        <img class="card-img rounded-0" src="./assets/images/gallery-24.png"
+                                            alt="gallery-img">
+                                        <div class="caption w-100">
+                                            <p class="mb-0 mt-1">כותרת</p>
+                                            <h6>
+                                                << קראו עוד</h6>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="carousel-item">
-                                    <div class="d-flex gap-3 gap-lg-5">
-                                        <div class="card bg-transparent px-0 border-0">
-                                            <div class="card-body p-0 text-center">
-                                                <img class="card-img rounded-0" src="./assets/images/gallery-24.png"
-                                                    alt="gallery-img">
-                                                <div class="caption w-100">
-                                                    <p class="mb-0 mt-1">כותרת</p>
-                                                    <h6>
-                                                        << קראו עוד</h6>
-                                                </div>
-                                            </div>
+                                <div class="card bg-transparent mx-2 px-0 border-0">
+                                    <div class="card-body p-0 text-center">
+                                        <img class="card-img rounded-0" src="./assets/images/gallery-18.png"
+                                            alt="gallery-img">
+                                        <div class="caption w-100">
+                                            <p class="mb-0 mt-1">כותרת</p>
+                                            <h6>
+                                                << קראו עוד</h6>
                                         </div>
-                                        <div class="card bg-transparent px-0 border-0">
-                                            <div class="card-body p-0 text-center">
-                                                <img class="card-img rounded-0" src="./assets/images/gallery-18.png"
-                                                    alt="gallery-img">
-                                                <div class="caption w-100">
-                                                    <p class="mb-0 mt-1">כותרת</p>
-                                                    <h6>
-                                                        << קראו עוד</h6>
-                                                </div>
-                                            </div>
+                                    </div>
+                                </div>
+                                <div class="card bg-transparent mx-2 px-0 border-0">
+                                    <div class="card-body p-0 text-center">
+                                        <img class="card-img rounded-0" src="./assets/images/gallery-21.png"
+                                            alt="gallery-img">
+                                        <div class="caption w-100">
+                                            <p class="mb-0 mt-1">כותרת</p>
+                                            <h6>
+                                                << קראו עוד</h6>
                                         </div>
-                                        <div class="card bg-transparent px-0 border-0">
-                                            <div class="card-body p-0 text-center">
-                                                <img class="card-img rounded-0" src="./assets/images/gallery-21.png"
-                                                    alt="gallery-img">
-                                                <div class="caption w-100">
-                                                    <p class="mb-0 mt-1">כותרת</p>
-                                                    <h6>
-                                                        << קראו עוד</h6>
-                                                </div>
-                                            </div>
+                                    </div>
+                                </div>
+                                <div class="card bg-transparent mx-2 px-0 border-0">
+                                    <div class="card-body p-0 text-center">
+                                        <img class="card-img rounded-0" src="./assets/images/gallery-22.png"
+                                            alt="gallery-img">
+                                        <div class="caption w-100">
+                                            <p class="mb-0 mt-1">כותרת</p>
+                                            <h6>
+                                                << קראו עוד</h6>
                                         </div>
-                                        <div class="card bg-transparent px-0 border-0">
-                                            <div class="card-body p-0 text-center">
-                                                <img class="card-img rounded-0" src="./assets/images/gallery-22.png"
-                                                    alt="gallery-img">
-                                                <div class="caption w-100">
-                                                    <p class="mb-0 mt-1">כותרת</p>
-                                                    <h6>
-                                                        << קראו עוד</h6>
-                                                </div>
-                                            </div>
+                                    </div>
+                                </div>
+                                <div class="card bg-transparent mx-2 px-0 border-0">
+                                    <div class="card-body p-0 text-center">
+                                        <img class="card-img rounded-0" src="./assets/images/gallery-24.png"
+                                            alt="gallery-img">
+                                        <div class="caption w-100">
+                                            <p class="mb-0 mt-1">כותרת</p>
+                                            <h6>
+                                                << קראו עוד</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card bg-transparent mx-2 px-0 border-0">
+                                    <div class="card-body p-0 text-center">
+                                        <img class="card-img rounded-0" src="./assets/images/gallery-18.png"
+                                            alt="gallery-img">
+                                        <div class="caption w-100">
+                                            <p class="mb-0 mt-1">כותרת</p>
+                                            <h6>
+                                                << קראו עוד</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card bg-transparent mx-2 px-0 border-0">
+                                    <div class="card-body p-0 text-center">
+                                        <img class="card-img rounded-0" src="./assets/images/gallery-21.png"
+                                            alt="gallery-img">
+                                        <div class="caption w-100">
+                                            <p class="mb-0 mt-1">כותרת</p>
+                                            <h6>
+                                                << קראו עוד</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card bg-transparent mx-2 px-0 border-0">
+                                    <div class="card-body p-0 text-center">
+                                        <img class="card-img rounded-0" src="./assets/images/gallery-22.png"
+                                            alt="gallery-img">
+                                        <div class="caption w-100">
+                                            <p class="mb-0 mt-1">כותרת</p>
+                                            <h6>
+                                                << קראו עוד</h6>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <button class="carousel-control-prev" type="button"
+                            <button class="slick-prev carousel-control-prev" type="button"
                                 data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" style="height: 18px;"
                                     aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
                             </button>
-                            <button class="carousel-control-next" type="button"
+                            <button class="slick-next carousel-control-next" type="button"
                                 data-bs-target="#carouselExampleInterval" data-bs-slide="next">
                                 <span class="carousel-control-next-icon" style="height: 18px;"
                                     aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
                             </button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -299,12 +293,9 @@
             </p>
         </div>
     </div>
-
-
     <!-- Modal -->
-    <div class="modal rounded-0 modal-lg" id="staticBackdrop"
-        data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
-        aria-hidden="true">
+    <div class="modal rounded-0 modal-lg" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content rounded-0" style="width: 1000px;">
                 <div class="modal-header border-0">
@@ -353,9 +344,8 @@
             </div>
         </div>
     </div>
-
-    <script src="./index.js" defer></script>
-
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
