--- a/single-block-2.html
+++ b/single-block-2.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./assets/bootstrap-5.2.0-beta1-dist/css/bootstrap.min.css">
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <script src="./assets/bootstrap-5.2.0-beta1-dist/js/bootstrap.min.js" defer></script>
+
 
     <link rel="stylesheet" href="./assets/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700&display=swap"
@@ -91,7 +93,7 @@
                 <div id="s2blog-lightbox" class="sblog-lightbox-wrapper">
                     <div class="d-flex box">
                         <div class="sblog-lightbox my-slide">
-                            <img src="./assets/images/blog-hero.png" alt="galler-img" " data-bs-toggle=" modal"
+                            <img src="./assets/images/blog-hero.png" alt="galler-img" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
                         </div>
                         <div class="sblog-lightbox my-slide">
